Fixed overflow bug

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -16,8 +16,12 @@ main {
 	section {
 		display: inline-block;
 		padding: 0 5%;
-
-		
+		height: 80%;
+		overflow-y: auto;
+	
+		table tr td {
+			max-width: 1024px;
+		}
 	}
 
 	em {
